More styling to flex website - WIP

--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
     </header>
 
     <div class="hero content">
+
         <div class="hero-left">
             <h1>This Flex Website is awesome</h1>
-            <p>This website has some subtext that goes here under the header one. It's a smaller font and the color is lower contrast</p>
+            <p>This website has some subtext that goes here under the header one. It's a smaller font and the color is lower contrast.</p>
             <button class="sign-up">Sign Up</button>
         </div>
         <div class="hero-right">
-            <img>
+            <p>Placeholder Image</p>
         </div>
     </div>
 
@@ -49,8 +50,10 @@
 
     <div class="quote-container content">
         <div id="quote">
-        <p class="quote">Inspirational quote here... orem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
-        <p class="quote-by">- Some person</p>
+            <div class="quote">
+                <p class="quote-italics">Inspirational quote here... orem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+                <p class="quote-by">- Some person</p>
+            </div>
         </div>
     </div>
 
