--- a/index.html
+++ b/index.html
@@ -32,19 +32,25 @@
         </div>
     </div>
 
-    <div class="content center-content">
+    <div class="box-container content center-content">
         <h2>Some random information.</h2>
-        <div class="boxes">
-            <div class="box"></div>
-            <p>This is just ordinary random text under a box or image.</p>
-        </div>
-        <div class="boxes">
-            <div class="box"></div>
-            <p>This is just ordinary random text under a box or image.</p>
-        </div>
-        <div class="boxes">
-            <div class="box"></div>
-            <p>This is just ordinary random text under a box or image.</p>
+        <div id="info">
+            <div class="boxes">
+                <div class="box"><p>Placeholder Image</p></div>
+                <p>This is just ordinary random text under a box or image.</p>
+            </div>
+            <div class="boxes">
+                <div class="box"><p>Placeholder Image</p></div>
+                <p>This is just ordinary random text under a box or image.</p>
+            </div>
+            <div class="boxes">
+                <div class="box"><p>Placeholder Image</p></div>
+                <p>This is just ordinary random text under a box or image.</p>
+            </div>
+            <div class="boxes">
+                <div class="box"><p>Placeholder Image</p></div>
+                <p>This is just ordinary random text under a box or image.</p>
+            </div>
         </div>
     </div>
 
