--- a/index.html
+++ b/index.html
@@ -20,15 +20,16 @@
         </ul>
     </header>
 
-    <div class="hero content">
-
-        <div class="hero-left">
-            <h1>This Flex Website is awesome</h1>
-            <p>This website has some subtext that goes here under the header one. It's a smaller font and the color is lower contrast.</p>
-            <button class="sign-up">Sign Up</button>
-        </div>
-        <div class="hero-right">
-            <p>Placeholder Image</p>
+    <div class="hero">
+        <div id="hero">
+            <div class="hero-left">
+                <h1>This Flex Website is awesome</h1>
+                <p>This website has some subtext that goes here under the header one. It's a smaller font and the color is lower contrast.</p>
+                <button class="sign-up">Sign Up</button>
+            </div>
+            <div class="hero-right">
+                <p>Placeholder Image</p>
+            </div>
         </div>
     </div>
 
